(library
    (name ppx_coda)
    (public_name ppx_coda)
    (kind ppx_deriver)
    (modules (:standard \ run_ppx_coda))
    (libraries compiler-libs.common ppxlib ppx_deriving.api core_kernel)
    (preprocess (pps ppxlib.metaquot)))

(executable
 (name run_ppx_coda)
 (modules run_ppx_coda)
 (libraries ppx_coda ppx_bin_prot compiler-libs.common ppxlib ppx_deriving.api core_kernel))
